tests/cases/compiler-development/artifact/errors/diagnostic-loop-break-live-owner.diagnostic
diagnostic error code=O0001 family=ownership message="owning binding 'token' must be moved or dropped before break" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-loop-break-live-owner.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-loop-break-live-owner.ari" bytes=91
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-loop-break-live-owner.ari" line=4 column=5 end_line=4 end_column=10 byte_start=66 byte_end=71 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-loop-break-live-owner.ari:4:5\n   |\n 4 |     break;\n   |     ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-loop-break-live-owner.ari" line=3 column=9 end_line=3 end_column=14 byte_start=42 byte_end=47 message="owning binding 'token' declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-loop-break-live-owner.ari:3:9\n   |\n 3 |     let token: own i64 = 5;\n   |         ^^^^^"
  Note index=0 location=none message="live owning bindings must be consumed explicitly before control leaves their scope"
  Help index=0 location=none message="drop 'token' before break or move it into the value that leaves this scope"
